--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,4 +4,4 @@
 <p><%= link_to post.title, show_url(post.id)%></p>
 <% end %>
 
-<%= link_to 'New Post', new_post_url %>
+<%= link_to 'New Post', new_url %>
