--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,6 @@
 
 <p><%= @post.content %></p>
 
-<p><%= link_to "Edit Post", edit_url(post.id) %></p>
+<p><%= link_to "Edit Post", edit_url(@post.id) %></p>
 
-<p><%= link_to "Delete Post", show_url(post.id), :method => 'delete' %></p>
+<p><%= link_to "Delete Post", show_url(@post.id), :method => 'delete' %></p>
