--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Post</h1>
 
-<%= form_tag posts_url, :method => 'patch' do %>
+<%= form_tag posts_url, :method => 'post' do %>
 
 <%= label_tag "title" %>
   <%= text_field_tag  "title" %>
